# bitvmx-hackathon-games

./: .gitignore  .gitmodules  GAME_FLOW.md  GAME_PLAY.md  GAME_PROTOCOL_AND_PROGRAM.md  LICENSE  README.md
backend/: .gitignore  Cargo.toml  README.md  config.yaml  install.sh  run-player-1.sh  start-bitcoin.sh  start-op-1.sh  start-op-2.sh  start-player-1.sh  start-player-2.sh  start.sh  swagger-ui.html
backend/.cargo/: config.toml
backend/bindings/: AddNumbersGame.ts  AddNumbersGameResponse.ts  AddNumbersGameStatus.ts  AddNumbersRequest.ts  AddNumbersResponse.ts  AggregatedKey.ts  AggregatedKeyRequest.ts  AggregatedKeyResponse.ts  AggregatedKeySubmission.ts  BitVMXProgramProperties.ts  CreateAddNumbersGameRequest.ts  CreateAddNumbersGameResponse.ts  CreateGameRequest.ts  CreateGameResponse.ts  FundingUtxoRequest.ts  FundingUtxosResponse.ts  Game.ts  GameOutcome.ts  GameReason.ts  GameResponse.ts  GameStatus.ts  GameStatusResponse.ts  HealthResponse.ts  MakeGuessRequest.ts  MakeGuessResponse.ts  MakeMoveRequest.ts  MakeMoveResponse.ts  Move.ts  MyFundingUtxoResponse.ts  OperatorKeys.ts  OtherParticipantFundingUtxoRequest.ts  P2PAddress.ts  Player.ts  PlayerRole.ts  Position.ts  ProgramSetupRequest.ts  ProgramSetupResponse.ts  ProtocolCostResponse.ts  ProtocolVisualizationResponse.ts  SendFundsRequest.ts  (+13 more)
backend/config/: player_1.yaml  player_2.yaml
backend/configs/: player_1.yaml  player_2.yaml
backend/scripts/: build-bitvmx.sh  build.sh  run-bitvmx-client.sh  run-bitvmx-dispatcher.sh  start-auto-mine.sh  start-bitcoin-mine.sh  start-bitcoin.sh  start-dispatcher-1.sh  start-dispatcher-2.sh  start-op-1.sh  start-op-2.sh  start-player-1.sh  start-player-2.sh
backend/src/: api.rs  app.rs  app_state.rs  bitvmx_rpc.rs  config.rs  http_errors.rs  lib.rs  main.rs  state.rs  types.rs
backend/src/api/: game.rs  health.rs
backend/src/bitvmx/: handler.rs
backend/src/bitvmx_rpc/: handler.rs
backend/tests/: bitvmx.rs  health.rs  request_id.rs
types/: types.ts
(+175 files in other folders)
