[package]
name = "bitvmx-tictactoe-backend"
version = "0.1.0"
edition = "2021"



[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TypeScript generation
ts-rs = "11.0"



# Swagger/OpenAPI documentation
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-axum = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }



# Configuration
serde_yaml = "0.9"
config = "0.14"



[dev-dependencies]
tokio-test = "0.4"
