[package]
name = "bitvmx-tictactoe-backend"
version = "0.1.0"
edition = "2021"


[dependencies]
# BitVMX client
bitvmx-client = { path = "../../rust-bitvmx-workspace/rust-bitvmx-client" }

# Web framework
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TypeScript generation
ts-rs = "11.0"

# Swagger/OpenAPI documentation
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0", features = ["axum", "vendored"] }

# Error handling
anyhow = { version = "1.0" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.15"

# Thread-safe initialization
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
